# microcat-avr-rs

./: .gitignore  Cargo.toml  README.md  build.rs  clippy.toml  output.csv  rust-toolchain.toml
.cargo/: config.toml
proto/: encoder.proto  imu.proto  message.proto  motor.proto  pressure.proto  time_sync.proto  tone_detector.proto
src/: main.rs  millis.rs  serial.rs  timer.rs  tone_detector.rs
src/imu/: mod.rs
src/motors/: as5040.rs  mod.rs  pid.rs
src/pressure_sensor/: mod.rs
src/serial/: mod.rs
